components/AudiowaveText/styles.module.css
.gradientText {
    background-image: linear-gradient(to right, var(--brand-orange-light), var(--brand-orange-dark), var(--brand-orange-light));
    /* background-size: 200% auto; */
    color: transparent;
    -webkit-background-clip: text;
    background-clip: text;
    animation: shine 4s linear infinite;
}

.defaultText {
    color: var(--brand-orange);
}

